# mcp-client-tools-comparison-pub-kb

./: .gitignore  CONTRIBUTING.md  GUIDELINES.md  PROCESS.md  README.md  README.template.md  spec.yaml
comparisons/: authentication.md  auto-generated.md  decision-tree-interactive.html  decision-tree-unfoldable.md  decision-tree.md  features.empty.md  features.md  mcp-to-openapi.md  openapi-to-mcp.md  security.empty.md  security.md  transports.empty.md  transports.md
projects/: ConechoAI--nchan-mcp-transport.yaml  Deniscartin--mcp-cli.yaml  EvalsOne--MCP-connect.yaml  MladenSU--cli-mcp-server.yaml  SecretiveShell--MCP-Bridge.yaml  TBXark--mcp-proxy.yaml  Vizioz--Swagger-MCP.yaml  acehoss--mcp-gateway.yaml  adhikasp--mcp-client-cli.yaml  apify--mcp-cli.yaml  chrishayuk--mcp-cli.yaml  cnoe-io--openapi-mcp-codegen.yaml  containers--kubernetes-mcp-server.yaml  docker--mcp-gateway.yaml  eirikb--any-cli-mcp-server.yaml  f--mcptools.yaml  g0t4--mcp-server-commands.yaml  (+21 more)
r-and-d/decision-tree-generator/: .gitignore  README.md  pyproject.toml  run_tests.py
r-and-d/decision-tree-generator/decision_tree/: __init__.py  cli.py  coverage.py  graphviz.py  html_details.py  loader.py  mermaid.py
r-and-d/decision-tree-generator/examples/: laptop-chooser.yaml  mcp-tool-chooser.yaml
r-and-d/decision-tree-generator/renderers/: to-graphviz.py  to-html-details.py  to-mermaid.py
r-and-d/decision-tree-generator/spec/: design.md  schema.yaml
r-and-d/decision-tree-generator/tests/: __init__.py  test_coverage.py  test_determinism.py  test_renderers.py  test_validation.py
(+20 files in other folders)
